// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField [common] example testing should match snapshot(s) for basic 1`] = `
<input
  className="lucid-TextField lucid-TextField-is-single-line"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  rows={5}
  style={
    Object {
      "marginBottom": "10px",
    }
  }
  type="text"
  value="foo"
/>
`;

exports[`TextField [common] example testing should match snapshot(s) for debounced 1`] = `
<input
  className="lucid-TextField lucid-TextField-is-single-line"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  rows={5}
  style={
    Object {
      "marginBottom": "10px",
    }
  }
  type="text"
  value="foo"
/>
`;

exports[`TextField [common] example testing should match snapshot(s) for on-submit 1`] = `
<input
  className="lucid-TextField lucid-TextField-is-single-line"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  rows={5}
  style={
    Object {
      "marginBottom": "10px",
    }
  }
  type="text"
  value="Enter some text in and hit enter"
/>
`;
